bridge meshing results inside a edgeloop pair can be broken by other loops #52384

Closed
opened 2017-08-13 17:52:47 +02:00 by mathieu menuet · 5 comments

System Information
all vendors

Blender Version
Broken: 2.79 RC1

Short description of error
Edgeloop pairs are always meshed correctly by bridge operator when isolated, but when other loops are added, the meshing can become broken

Exact steps for others to reproduce the error
Open attached file. bug bridge.blend
On top layers are the results of bridging, on the lower ones, the corresponding loops.
Isolated pairs give good result:
bug bridge ok.JPG
When more are added, verts are connected to other ones that are very far away, creating broken topology (compare area near the 3D Cursor):
bug bridge.JPG

**System Information** all vendors **Blender Version** Broken: 2.79 RC1 **Short description of error** Edgeloop pairs are always meshed correctly by bridge operator when isolated, but when other loops are added, the meshing can become broken **Exact steps for others to reproduce the error** Open attached file. [bug bridge.blend](https://archive.blender.org/developer/F709440/bug_bridge.blend) On top layers are the results of bridging, on the lower ones, the corresponding loops. Isolated pairs give good result: ![bug bridge ok.JPG](https://archive.blender.org/developer/F709438/bug_bridge_ok.JPG) When more are added, verts are connected to other ones that are very far away, creating broken topology (compare area near the 3D Cursor): ![bug bridge.JPG](https://archive.blender.org/developer/F709436/bug_bridge.JPG)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @bliblubli

Added subscriber: @bliblubli
Author

note that the edgeloop pairs are made correctly, so that the same loops are connected, bug happen on vertex level somehow.

note that the edgeloop pairs are made correctly, so that the same loops are connected, bug happen on vertex level somehow.
Campbell Barton self-assigned this 2017-08-13 17:54:48 +02:00

This issue was referenced by 7c8e87fc52

This issue was referenced by 7c8e87fc52d1e6c283f69b1aaaccfc98872f006b

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#52384
No description provided.